# turboshake

./: Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml  test_ci.yml
benches/: keccak.rs  turboshake.rs
examples/: keccak.rs  simd_keccak.rs  turboshake128.rs  turboshake256.rs
src/: branch_opt_util.rs  error.rs  keccak.rs  lib.rs  sponge.rs  tests.rs  turboshake128.rs  turboshake256.rs
