[package]
name = "turboshake"
version = "0.4.1"
edition = "2024"
resolver = "2"
rust-version = "1.85.0"
authors = ["Anjan Roy <hello@itzmeanjan.in>"]
description = "A family of extendable output functions based on keccak-p[1600, 12] permutation"
readme = "README.md"
repository = "https://github.com/itzmeanjan/turboshake.git"
license = "MIT"
keywords = ["cryptography", "keccak", "xof", "hashing", "turboshake"]
categories = ["cryptography", "algorithms"]

[features]
dev = []

[dependencies]

[dev-dependencies]
rand = "=0.9.0"
rand_chacha = "=0.9.0"
hex = "=0.4.3"
test-case = "=3.3.1"
divan = "=0.1.17"

[[bench]]
name = "keccak"
harness = false
required-features = ["dev"]

[[bench]]
name = "turboshake"
harness = false

[profile.optimized]
inherits = "release"
codegen-units = 1
lto = "thin"
panic = "abort"
