[package]
name = "turboshake"
version = "0.5.0"
edition = "2024"
resolver = "3"
rust-version = "1.85.0"
authors = ["Anjan Roy <hello@itzmeanjan.in>"]
description = "A family of extendable output functions (XOFs) based on 12-rounds Keccak[1600] permuation"
readme = "README.md"
repository = "https://github.com/itzmeanjan/turboshake.git"
license = "MIT"
keywords = ["cryptography", "keccak", "xof", "hashing", "turboshake"]
categories = ["cryptography", "algorithms"]

[features]
dev = []

[dependencies]

[dev-dependencies]
rand = "=0.9.2"
const-hex = "=1.14.1"
test-case = "=3.3.1"
divan = "=0.1.21"

[[bench]]
name = "keccak"
harness = false
required-features = ["dev"]

[[bench]]
name = "turboshake"
harness = false

[profile.optimized]
inherits = "release"
codegen-units = 1
lto = "thin"
panic = "abort"
opt-level = 3
